--- a/front-end-labs/index.html
+++ b/front-end-labs/index.html
@@ -1,1 +1,28 @@
 <!-- Placeholder -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>ZipPay app</h1>
+
+    <nav>
+        <ul>
+            <li><a href="pages/send-receive.html">Send/Receive</a></li>
+            <li><a href="pages/account-settings.html">Account settings</a> </li>
+            <li><a href="pages/balance.html">Balance</a></li>
+            <li><a href="pages/search.html">Search</a></li>
+            <li><a href="pages/split-the-bill">Split the bill</a> </li>
+        </ul>
+        
+    </nav>
+
+    <hr>
+
+    <p>Content will eventually go here.</p>
+    
+</body>
+</html>
