--- a/front-end-labs/pages/account-settings.html
+++ b/front-end-labs/pages/account-settings.html
@@ -10,10 +10,168 @@
 	</head>
 	<body>
 		<h1>Account Settings</h1>
-		<!--  Navbar should go here -->
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a> </li>
+				<li><a href="pages/send-receive.html">Send/Receive</a></li>
+				<li><a href="pages/balance.html">Balance</a></li>
+				<li><a href="pages/search.html">Search</a></li>
+				<li><a href="pages/split-the-bill">Split the bill</a> </li>
+			</ul>
+		</nav>
 		<section>
 			<h2>Account Details</h2>
-			<!-- Account details form goes here -->
+			<form>
+				<p>
+					It's required, has a minimum length of 2, a maximum length of 20, alphabetical letters, hyphens, or spaces
+				</p>
+				<div>
+					<label for="first-name">First Name:</label>
+					<input
+						type="text"
+						name="first-name"
+						id="first-name"
+						minlength="2"
+						maxlength="20"
+						required
+						pattern="[A-Z][a-z\- ]+"
+					/>
+					
+				</div>
+				<div>
+					<label for="last-name">Last Name:</label>
+					<input
+						type="text"
+						name="last-name"
+						id="last-name"
+						minlength="2"
+						maxlength="20"
+						required
+						pattern="[A-Z][a-z\- ]+"
+					/>
+				</div>
+				<div>
+					<label for="city">City:</label>
+					<input
+						type="text"
+						name="city"
+						id="city"
+						minlength="2"
+						maxlength="20"
+						required
+						pattern="[A-Z][a-z\- ]+"
+					/>
+				</div>
+
+				<div>
+					<p>Select list</p>
+					<!-- label[for] points to input[id] -->
+					<label for="state">Select a state</label>
+					<select
+						name="state"
+						id="state"
+					>
+					<option value="AL">Alabama</option>
+					<option value="AK">Alaska</option>
+					<option value="AZ">Arizona</option>
+					<option value="AR">Arkansas</option>
+					<option value="CA">California</option>
+					<option value="CO">Colorado</option>
+					<option value="CT">Connecticut</option>
+					<option value="DE">Delaware</option>
+					<option value="DC">District Of Columbia</option>
+					<option value="FL">Florida</option>
+					<option value="GA">Georgia</option>
+					<option value="HI">Hawaii</option>
+					<option value="ID">Idaho</option>
+					<option value="IL">Illinois</option>
+					<option value="IN">Indiana</option>
+					<option value="IA">Iowa</option>
+					<option value="KS">Kansas</option>
+					<option value="KY">Kentucky</option>
+					<option value="LA">Louisiana</option>
+					<option value="ME">Maine</option>
+					<option value="MD">Maryland</option>
+					<option value="MA">Massachusetts</option>
+					<option value="MI">Michigan</option>
+					<option value="MN">Minnesota</option>
+					<option value="MS">Mississippi</option>
+					<option value="MO">Missouri</option>
+					<option value="MT">Montana</option>
+					<option value="NE">Nebraska</option>
+					<option value="NV">Nevada</option>
+					<option value="NH">New Hampshire</option>
+					<option value="NJ">New Jersey</option>
+					<option value="NM">New Mexico</option>
+					<option value="NY">New York</option>
+					<option value="NC">North Carolina</option>
+					<option value="ND">North Dakota</option>
+					<option value="OH">Ohio</option>
+					<option value="OK">Oklahoma</option>
+					<option value="OR">Oregon</option>
+					<option value="PA">Pennsylvania</option>
+					<option value="RI">Rhode Island</option>
+					<option value="SC">South Carolina</option>
+					<option value="SD">South Dakota</option>
+					<option value="TN">Tennessee</option>
+					<option value="TX">Texas</option>
+					<option value="UT">Utah</option>
+					<option value="VT">Vermont</option>
+					<option value="VA">Virginia</option>
+					<option value="WA">Washington</option>
+					<option value="WV">West Virginia</option>
+					<option value="WI">Wisconsin</option>
+					<option value="WY">Wyoming</option>
+								</select>
+				</div>
+
+			<div>
+				<label for="zipcode">Zipcode:</label>
+				<input
+					type="text"
+					name="zipcode"
+					id="zipcode"
+					minlength="5"
+					maxlength="5"
+					required
+					pattern="^\d{5}$"
+					/>
+			</div>
+			<div>
+				<label for="email">Email:</label>
+				<input
+					type="email"
+					name="email"
+					id="email"
+					minlength="3"
+					required
+					pattern="^\d{5}$"
+					/>
+			</div>
+
+			
+			<div style="margin-bottom: 20px">
+				<!-- label[for] points to input[id] -->
+				<label for="account-type">Select Account Type</label>
+				<select
+					multiple
+					size="3"
+					name="account-type"
+					id="account-type"
+				>
+					<option>Personal</option>
+					<option>Corporate</option>
+					<option>Other</option>
+				</select>
+			</div>
+			<div>
+				<!-- Easier to style with CSS, easier to work with -->
+				<p>Buttons</p>
+				<button type="submit">Submit</button>
+				<button type="reset">Reset</button>
+				<button type="button">Generic</button>
+			</div>
+			</form>
 		</section>
 	</body>
 </html>
