formatting account-settings page

--- a/front-end-labs/pages/account-settings.html
+++ b/front-end-labs/pages/account-settings.html
@@ -27,6 +27,8 @@
 				</p>
 				<div>
 					<label for="first-name">First Name:</label>
+				</div>
+				<div>
 					<input
 						type="text"
 						name="first-name"
@@ -40,6 +42,8 @@
 				</div>
 				<div>
 					<label for="last-name">Last Name:</label>
+				</div>
+				<div>
 					<input
 						type="text"
 						name="last-name"
@@ -52,6 +56,8 @@
 				</div>
 				<div>
 					<label for="city">City:</label>
+				</div>
+				<div>
 					<input
 						type="text"
 						name="city"
@@ -63,10 +69,12 @@
 					/>
 				</div>
 
+				<br>
 				<div>
-					<p>Select list</p>
 					<!-- label[for] points to input[id] -->
 					<label for="state">Select a state</label>
+				</div>
+				<div>
 					<select
 						name="state"
 						id="state"
@@ -122,11 +130,13 @@
 					<option value="WV">West Virginia</option>
 					<option value="WI">Wisconsin</option>
 					<option value="WY">Wyoming</option>
-								</select>
+					</select>
 				</div>
 
 			<div>
 				<label for="zipcode">Zipcode:</label>
+			</div>
+			<div>
 				<input
 					type="text"
 					name="zipcode"
@@ -139,6 +149,8 @@
 			</div>
 			<div>
 				<label for="email">Email:</label>
+			</div>
+			<div>
 				<input
 					type="email"
 					name="email"
@@ -150,9 +162,10 @@
 			</div>
 
 			
-			<div style="margin-bottom: 20px">
-				<!-- label[for] points to input[id] -->
+			<div >
 				<label for="account-type">Select Account Type</label>
+			</div>
+			<div>
 				<select
 					multiple
 					size="3"
