--- a/front-end-labs/pages/navbar.html
+++ b/front-end-labs/pages/navbar.html
@@ -7,11 +7,53 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Navbar</title>
+		<link
+			rel="stylesheet"
+			href="/css/bootstrap.css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
 		<style>
-			/* Placeholder */
+			ul {
+				padding: 0;
+				display: flex;
+				justify-content: space-around; /* Align items evenly */
+  				align-items: center;
+				list-style-type: none;
+			}
+
+			li {
+				display: flex;
+				/* flex-direction: column; */
+				align-items: center;
+				padding: 1rem;
+				border-radius: 1rem;
+				height: 1rem;
+			}
+
+			li:hover{
+				background-color: #bbb;
+			}
+
+			.navbar-title {
+				text-align: center;
+			}
+
 		</style>
 	</head>
 	<body>
-		<h1>ZipPay Navbar</h1>
+		<h1 class="navbar-title">ZipPay Navbar</h1>
+		<nav>
+			<ul>
+				<li><a href="pages/send-receive.html"><span class="material-icons">favorite_border</span> Send/Receive</a></li>
+				<li><a href="pages/account-settings.html">Account settings</a> </li>
+				<li><a href="pages/balance.html">Balance</a></li>
+				<li><a href="pages/search.html">Search</a></li>
+				<li><a href="pages/split-the-bill">Split the bill</a> </li>
+			</ul>
+			
+		</nav>
 	</body>
 </html>
