--- a/front-end-labs/pages/send-receive.html
+++ b/front-end-labs/pages/send-receive.html
@@ -7,12 +7,100 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Send/Receive Payments</title>
+		<link
+			rel="stylesheet"
+			href="/css/bootstrap.css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="../public/css/navbar.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="../public/css/send-receive.css"
+		/>
+		
 	</head>
-	<body>
-		<h1>Send/Receive Payments</h1>
+	<body style="background-color: aliceblue;">
+		<h1 class="navbar-title">Send/Receive Payments</h1>
 		<!--  Navbar should go here -->
+		<nav>
+			<ul>
+				<li><a href="pages/send-receive.html">Send/Receive</a></li>
+				<li><a href="pages/account-settings.html">Account settings</a> </li>
+				<li><a href="pages/balance.html">Balance</a></li>
+				<li><a href="pages/search.html">Search</a></li>
+				<li><a href="pages/split-the-bill">Split the bill</a> </li>
+			</ul>
+		</nav>
+
 		<main>
 			<!-- Send/receive payments form goes here -->
+			 <form class="send-receive-form one-by-three">
+				<div></div>
+
+				<div class="form-container">
+					
+					<div class="form-label"> <label for="account">Account:</label></div>
+					<div>
+						<input
+							type="text"
+							name="account"
+							id="account"
+							minlength="2"
+							maxlength="20"
+							required
+							pattern="[A-Z][a-z\- ]+"
+						/>
+					</div>
+					<div class="form-label">
+						<label for="recepient">Recepient:</label>
+					</div>
+					<div>
+						<input
+							type="text"
+							name="recepient"
+							id="recepient"
+							minlength="2"
+							maxlength="20"
+							required
+							pattern="[A-Z][a-z\- ]+"
+						/>
+					</div>
+					<div class="form-label">
+						<label for="amount">Amount:</label>
+					</div>
+					<div>
+						<input
+							type="number"
+							name="amount"
+							id="amount"
+							required
+							value="0"
+						/>
+					</div>
+					<div class="form-label">
+						<label for="reason">Reason:</label>
+					</div>
+					<div>
+						<textarea
+							name="reason"
+							id="reason"
+							cols="30"
+							rows="10"
+							maxlength="1000"
+					></textarea>
+				</div>
+				<div >
+					<button type="submit">Submit</button>
+				</div>
+				</div>
+				<div></div>
+			 </form>
 		</main>
 	</body>
 </html>
